updated front end with the APIs

--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -3586,7 +3586,7 @@ flex-shrink: 0;
 
 @media (min-width: 1301px) {
   #header .sticky-area-wrap .header-ct-left #hamburger {
-      display: none !important;
+      /* display: none !important; */
   }
 }
 
