--- a/src/components/applicantcomponents/hackathon.css
+++ b/src/components/applicantcomponents/hackathon.css
@@ -45,6 +45,7 @@
 /* Dropdown list */
 .dropdown-list {
   position: absolute;
+  width: 150px;
   top: 46px;
   left: 0;
   right: 0;
@@ -60,6 +61,7 @@
 .dropdown-list li {
   padding: 3px 10px;
   border-radius: 8px;
+  width: 100%;
   cursor: pointer;
   color: #272727;
   transition: background 0.3s ease;
@@ -92,11 +94,26 @@
   font-size: 15px;
 }
 
+.search-box input[type="text"] {
+  all: unset;
+}
+
+
 .status-tabs {
   display: flex;
   gap: 24px;
   border-bottom: 1px solid #e0e0e0; /* thin line below tabs */
+  align-items: center;
+  justify-content: center;
+}
 
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* or flex-start if you want both on left */
+  gap: 24px;
+    margin-top: 7%;
+    width: 100%;
 }
 
 .status-tabs .tab {
@@ -148,40 +165,48 @@
 }
 
 .newCards-grid {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr); /* Extra large: 5 newCards */
+  display: grid;/* Extra large: 5 newCards */
   gap: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
 }
-
+@media (max-width: 1700px) {
+  .newCards-grid {
+    grid-template-columns: repeat(6, 1fr);
+  }
+}
 /* Large (max 1400px) -> 4 newCards */
 @media (max-width: 1400px) {
   .newCards-grid {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
   }
 }
 
 /* Medium (max 1200px) -> 3 newCards */
 @media (max-width: 1200px) {
   .newCards-grid {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
 /* Small (max 992px) -> 2 newCards */
 @media (max-width: 992px) {
   .newCards-grid {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
 /* Extra Small (max 768px) -> 1 newCard */
 @media (max-width: 768px) {
   .newCards-grid {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
+
+  @media (max-width: 400px) {
+  .newCards-grid {
+    grid-template-columns: 1fr;
+  }}
 
 .newCard {
   background: white;
