--- a/src/stylesheets/dashboard.css
+++ b/src/stylesheets/dashboard.css
@@ -1068,7 +1068,7 @@ tbody tr td:nth-child(2) {
     width: 1%;
 }
 
-@media screen and (min-width: 320px) and (max-width: 1400px) {
+@media screen and (min-width: 320px) and (max-width: 700px) {
     .hamburger-icon {
         width: 20px;
         height: 14px;
@@ -1096,8 +1096,15 @@ tbody tr td:nth-child(2) {
     }
 }
 
+body.close-sidebar .dashboard.show .dashboard__content {
+  margin-left: 0; 
+}
 
-/* @media screen and (min-width: 700px) and (max-width: 1400px) {
+body.open-sidebar .dashboard.show .dashboard__content {
+  margin-left: 320px !important; 
+}
+
+@media screen and (min-width: 700px) and (max-width: 1400px) {
     .hamburger-icon {
         width: 20px;
         height: 14px;
@@ -1123,7 +1130,7 @@ tbody tr td:nth-child(2) {
         width: 4%;
         top: 62px;
     }
-} */
+}
 
 .dashboard .dashboard__sidebar .sidebar__menu::-webkit-scrollbar {
     width: 3px;
@@ -4121,7 +4128,7 @@ input[type="radio"]:checked:after {
     }
 }
 
-@media only screen and (max-width: 2000px) {
+@media only screen and (max-width: 1300px) {
 
     .left-menu {
         display: none;
@@ -5588,11 +5595,11 @@ width: 24px;
     margin-left:15px;
 }
 
-/* @media (max-width: 130px) and (min-width: 1024px) {
+@media (max-width: 130px) and (min-width: 1024px) {
     #header .sticky-area-wrap .header-ct-left #hamburger {
         display: block !important;
     }
-} */
+}
 
 @media only screen and (max-width: 655px) {
 .button-link1 {
